# astronomicalalgorithms

./: .gitignore  README.md
aawrapper/: CMakeLists.txt
aawrapper/include/aawrapper/: AstronomicalBody.h  Mars.h  Moon.h  Planet.h  Pluto.h  Sun.h
aawrapper/source/: AstronomicalBody.cpp  Mars.cpp  Moon.cpp  Planet.cpp  Pluto.cpp  Sun.cpp
android/: CMakeLists.txt  android-release-aar.gradle  build.gradle  proguard-rules.pro  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/androidTest/java/org/astronomical/algorithms/: ExampleInstrumentedTest.java  MoonTest.java  PlanetsTest.java  SunTest.java
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
android/src/main/cpp/include/: AstronomicalBodyJavaHelper.h  DateConversions.h  MarsJavaHelper.h  MoonJavaHelper.h  PlanetJavaHelper.h  PlutoJavaHelper.h  SunJavaHelper.h
android/src/main/cpp/source/: AstronomicalBodyJavaHelper.cpp  DateConversions.cpp  MarsJavaHelper.cpp  MoonJavaHelper.cpp  PlanetJavaHelper.cpp  PlutoJavaHelper.cpp  SunJavaHelper.cpp  entry-point.cpp
android/src/main/java/org/astronomical/algorithms/: AstronomicalBody.java  Mars.java  Moon.java  Planet.java  Pluto.java  Sun.java
android/src/test/java/org/astronomical/algorithms/: ExampleUnitTest.java
samples/android/: settings.gradle
samples/android/app/: build.gradle
samples/android/app/src/androidTest/java/org/astronomical/algorithms/test/: ExampleInstrumentedTest.java
samples/android/app/src/main/: AndroidManifest.xml
samples/android/app/src/main/java/org/astronomical/algorithms/sample/: MainActivity.java
samples/android/app/src/main/res/layout/: activity_main.xml
samples/android/app/src/main/res/values/: strings.xml
samples/android/app/src/test/java/org/astronomical/algorithms/test/: ExampleUnitTest.java
samples/android/gradle/wrapper/: gradle-wrapper.properties
